--- a/Exercise_set2_notebook.ipynb
+++ b/Exercise_set2_notebook.ipynb
@@ -1250,6 +1250,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the Normalization problem, I have taken data from kaggle. (https://www.kaggle.com/datasets/kapturovalexander/gold-and-silver-prices-2013-2023?resource=download). Since, we are comparing prices, the closing price or last price is used for convenience."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
